--- a/static/compatibilities/traefik.yaml
+++ b/static/compatibilities/traefik.yaml
@@ -3,25 +3,27 @@ git_url: https://github.com/traefik/traefik
 release_url: https://github.com/traefik/traefik/releases/tag/v{vsn}
 helm_repository_url: https://traefik.github.io/charts
 versions:
-- version: 3.6.5
+- version: 3.6.6
   kube: ['1.35', '1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['From v3.6.0 (baseline): added new ACME certificatesResolvers options;
-        added least-time and HighestRandomWeight load-balancing strategies; added
-        TCP (active) healthchecks and passive health checks; added Knative provider
-        and improvements to Kubernetes/Gateway API and Ingress publishing (including
-        ExternalName services); added multi-layer routing; added HTTP/2 HPACK table
-        size options; and several dashboard/UI tweaks.', v3.6.5 is a patch release
-        with no new features called out in the notes you provided; it focuses on fixes/behavior
-        clarifications.]
-    breaking_changes: ['Access logs will now also be printed for rejected requests;
-        the release note explicitly warns about this new behavior, so log volume/content
-        may change and could affect log-based alerts/costs.']
-  chart_version: 38.0.1
+    features: ['v3.6.0 introduced multiple new capabilities that may affect how you
+        configure Traefik: new ACME certificate resolver options, least-time/HighestRandomWeight
+        load balancing strategies, TCP health checks plus passive health checks, multi-layer
+        routing, HTTP/2 HPACK tuning options, and a new Knative provider.', 'v3.6.0
+        also expanded Kubernetes integrations (Gateway API bump to v1.4.0, CRD weighting
+        improvements, Ingress ExternalName support) and added ECS IPv6 support and
+        Docker discovery for non-running containers.']
+    breaking_changes: ["No explicit breaking changes are listed in the provided notes\
+        \ for v3.6.0\u2192v3.6.6, but v3.6.0 explicitly requires reading the migration\
+        \ guide\u2014treat this as potentially containing behavior/config changes\
+        \ to validate before upgrading.", "Even in patch releases, security/behavior\
+        \ fixes (e.g., \u201Cdeny encoded characters\u201D in v3.6.6) can change request\
+        \ handling; validate application paths that rely on unusual/encoded URLs."]
+  chart_version: 38.0.2
   images: []
 - version: 3.6.0
   kube: ['1.35', '1.34', '1.33', '1.32']
