--- a/static/compatibilities/traefik.yaml
+++ b/static/compatibilities/traefik.yaml
@@ -3,25 +3,24 @@ git_url: https://github.com/traefik/traefik
 release_url: https://github.com/traefik/traefik/releases/tag/v{vsn}
 helm_repository_url: https://traefik.github.io/charts
 versions:
-- version: 3.6.5
+- version: 3.6.6
   kube: ['1.35', '1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['From v3.6.0 (baseline): added new ACME certificatesResolvers options;
-        added least-time and HighestRandomWeight load-balancing strategies; added
-        TCP (active) healthchecks and passive health checks; added Knative provider
-        and improvements to Kubernetes/Gateway API and Ingress publishing (including
-        ExternalName services); added multi-layer routing; added HTTP/2 HPACK table
-        size options; and several dashboard/UI tweaks.', v3.6.5 is a patch release
-        with no new features called out in the notes you provided; it focuses on fixes/behavior
-        clarifications.]
-    breaking_changes: ['Access logs will now also be printed for rejected requests;
-        the release note explicitly warns about this new behavior, so log volume/content
-        may change and could affect log-based alerts/costs.']
-  chart_version: 38.0.1
+    features: ['v3.6.0 adds multiple new capabilities: new ACME certificate resolver
+        options; least-time and HighestRandomWeight load-balancing; TCP health checks
+        plus passive health checks; multi-layer routing; HTTP/2 HPACK table size tuning;
+        a Knative provider; and various Kubernetes improvements (Gateway API bump,
+        CRD weighting, Ingress ExternalName support).', 'v3.6.6 is primarily a patch
+        release with dependency bumps (lego for ACME, quic-go for HTTP/3) and several
+        small server/Redis correctness fixes, plus documentation improvements.']
+    breaking_changes: ['v3.6.0 explicitly calls out that you should read the Traefik
+        v3.6 migration guide, implying there may be behavior/config changes to account
+        for when upgrading from earlier versions (review the guide before rollout).']
+  chart_version: 38.0.2
   images: []
 - version: 3.6.0
   kube: ['1.35', '1.34', '1.33', '1.32']
