--- a/go/nexus/.golangci.yml
+++ b/go/nexus/.golangci.yml
@@ -1,17 +1,4 @@
 version: "2"
-
-run:
-  timeout: 5m
-  tests: true
-
-output:
-  formats:
-    text:
-      path: stdout
-      colors: true
-      print-issued-lines: true
-      print-linter-name: true
-
 linters:
   default: none
   enable:
@@ -30,50 +17,27 @@ linters:
     - unconvert
     - unparam
     - unused
-
   exclusions:
+    generated: lax
+    rules:
+      - linters:
+          - lll
+        path: api/*
+      - linters:
+          - dupl
+          - lll
+        path: internal/*
     paths:
-      - proto/$
-  settings:
-    dupl:
-      threshold: 100
-
-    goconst:
-      min-len: 2
-      min-occurrences: 3
-
-    gocritic:
-      enabled-tags:
-        - diagnostic
-        - experimental
-        - opinionated
-        - performance
-        - style
-
-    gocyclo:
-      min-complexity: 15
-
-    govet:
-      enable:
-        - shadow
-      settings:
-        shadow:
-          strict: true
-
-    lll:
-      line-length: 140
-
-    misspell:
-      locale: US
-
-    revive:
-      rules:
-        - name: var-naming
-          severity: warning
-          disabled: false
-
-issues:
-  max-issues-per-linter: 0
-  max-same-issues: 0
-
-
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
