chore: update golangci-lint version to v2.4.0 in CI configuration

--- a/.github/workflows/nexus-ci.yaml
+++ b/.github/workflows/nexus-ci.yaml
@@ -24,6 +24,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
+          version: v2.4.0
           working-directory: go/nexus
 
   test:
